@@ -3407,7 +3407,7 @@ void QWebPage::updatePositionDependentActions(const QPoint &pos)
 
     \inmodule QtWebKit
 
-    \sa QWebPage::extension() QWebPage::ExtensionReturn
+    \sa QWebPage::extension(), QWebPage::ExtensionReturn
 */
 
 
@@ -3418,7 +3418,7 @@ void QWebPage::updatePositionDependentActions(const QPoint &pos)
 
     \inmodule QtWebKit
 
-    \sa QWebPage::extension() QWebPage::ExtensionOption
+    \sa QWebPage::extension(), QWebPage::ExtensionOption
 */
 
 /*!
@@ -3434,7 +3434,7 @@ void QWebPage::updatePositionDependentActions(const QPoint &pos)
 
     The error itself is reported by an error \a domain, the \a error code as well as \a errorString.
 
-    \sa QWebPage::extension() QWebPage::ErrorPageExtensionReturn
+    \sa QWebPage::extension(), QWebPage::ErrorPageExtensionReturn
 */
 
 /*!
@@ -3481,7 +3481,7 @@ void QWebPage::updatePositionDependentActions(const QPoint &pos)
     External objects such as stylesheets or images referenced in the HTML are located relative to
     \a baseUrl.
 
-    \sa QWebPage::extension() QWebPage::ErrorPageExtensionOption, QString::toUtf8()
+    \sa QWebPage::extension(), QWebPage::ErrorPageExtensionOption, QString::toUtf8()
 */
 
 /*!
@@ -3524,7 +3524,7 @@ void QWebPage::updatePositionDependentActions(const QPoint &pos)
     The ChooseMultipleFilesExtensionOption class holds the frame originating the request
     and the suggested filenames which might be provided.
 
-    \sa QWebPage::extension() QWebPage::chooseFile(), QWebPage::ChooseMultipleFilesExtensionReturn
+    \sa QWebPage::extension(), QWebPage::chooseFile(), QWebPage::ChooseMultipleFilesExtensionReturn
 */
 
 /*!
@@ -3553,7 +3553,7 @@ void QWebPage::updatePositionDependentActions(const QPoint &pos)
     The ChooseMultipleFilesExtensionReturn class holds the filenames selected by the user
     when the extension is invoked.
 
-    \sa QWebPage::extension() QWebPage::ChooseMultipleFilesExtensionOption
+    \sa QWebPage::extension(), QWebPage::ChooseMultipleFilesExtensionOption
 */
 
 /*!
