@@ -1,3 +1,13 @@
+2012-05-10  Marius Storm-Olsen  <marius.storm-olsen@nokia.com>
+
+        [Qt] Fix \sa usage in documentation
+
+        Ensure comma between elements (6 missing).
+
+        Reviewed by Tor Arne Vestbø.
+
+        * Api/qwebpage.cpp:
+
 2012-05-09  Gyuyoung Kim  <gyuyoung.kim@samsung.com>
 
         Move suspendAnimations to use Internals interface.
